fix(editor) : manage editor overflow

--- a/src/app/components/wysiwyg/wysiwyg.component.scss
+++ b/src/app/components/wysiwyg/wysiwyg.component.scss
@@ -12,5 +12,6 @@
     padding:1em;
     background: white;
     margin: 0 auto;
-    height: 100vh;
+    height: 83vh;
+    max-height: 83vh;
 }
